fix(test): replace Aldrich Park with Pacific Ocean for true empty control
Aldrich Park detected nearby UCI campus buildings (35.9m) which is
actually correct algorithm behavior - it found obstacles!

Replacing with offshore Pacific Ocean location (~10km out) where
there cannot possibly be buildings, for a true negative control test.

--- a/tests/test-flight-logic.html
+++ b/tests/test-flight-logic.html
@@ -596,12 +596,12 @@
             );
 
             // =====================================================================
-            // TEST 5: Open Field (Aldrich Park, UCI) - No buildings expected
+            // TEST 5: Pacific Ocean - True empty control (no buildings possible)
             // =====================================================================
             await runTest(
-                'Aldrich Park UCI - Open Field (Control)',
-                33.64610, -117.84280,
-                { min: 0, max: 5 } // Should have near-zero building height
+                'Pacific Ocean off Newport - Empty Control',
+                33.55000, -117.95000,  // ~10km offshore
+                { min: 0, max: 10 } // Should have zero building height
             );
 
             // =====================================================================
