Improve realtime UI and proxying

--- a/static/planner/index.html
+++ b/static/planner/index.html
@@ -1010,10 +1010,7 @@
     <!-- Toast Container -->
     <div id="toastContainer" class="toast-container"></div>
 
-    <!-- Load Route Engine (Terrain Following Algorithm) -->
-    <script src="src/route-engine.js"></script>
-
-    <!-- Shared Route Planner -->
+    <!-- Shared Route Planner (server-backed) -->
     <script src="../js/route-planner.js"></script>
 
     <!-- Shared Camera Controls -->
